# SPH_OpenGL

./: README.md  sources.md
2D/: CMakeLists.txt
2D/src/: main.cpp
2D/src/shader/: external.compute  fragment.fs  offsets.compute  partition.compute  sort.compute
3D/: CMakeLists.txt
3D/src/: camera.h  gui.cpp  gui.h  gyro_source.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  simulation.cpp  simulation.h  utilities.cpp  utilities.h
3D/src/shaders/: blur.fs  composite.fs  count.compute  cube_f.fs  density.compute  external.compute  fragment.fs  geometry.gs  offsets.compute  partition.compute  scan_add.compute  scan_blocks.compute  scan_sums.compute  scatter.compute  sort.compute  sort_local.compute  thickness.fs  update.compute  vertex.vs
3D/src/shaders/fluid/: composite.fs  depth.fs  fullscreen.vs
3D/src/shaders/scene/: cube.fs  cube.vs  floor.fs  floor.vs  particle.vs
3D/src/shaders/simulation/: common.glsl  external.compute
src/: camera.h  main.cpp
src/shader/: density.compute  external.compute  fragment.fs  populateCells.compute  populateStart.compute  radixSort.compute  update.compute  vertex.vs
srcSH/: main.cpp
srcSH/shader/: bitonicMergeSort.compute  density.compute  partition.compute  sort.compute  update.compute
